--- a/src/laporan/PrintStokDarah.form
+++ b/src/laporan/PrintStokDarah.form
@@ -538,7 +538,7 @@
                       </Table>
                     </Property>
                     <Property name="selectionBackground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="21" green="31" red="40" type="rgb"/>
+                      <Color blue="0" green="0" red="ff" type="rgb"/>
                     </Property>
                   </Properties>
                 </Component>
