--- a/src/laporan/report_user.jrxml
+++ b/src/laporan/report_user.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="383d0601-c62d-4865-b5c6-584c58f4e621">
-	<property name="ireport.zoom" value="8.954302432552407"/>
-	<property name="ireport.x" value="6803"/>
-	<property name="ireport.y" value="2068"/>
+	<property name="ireport.zoom" value="1.6105100000000068"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50" isBold="false" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#CCCCCC" fontName="Times New Roman" fontSize="18" isBold="false" pdfFontName="Times-Roman"/>
 	<style name="Column header" forecolor="#666666" fontName="Times New Roman" fontSize="14" isBold="true" pdfFontName="Times-Roman"/>
@@ -46,55 +46,59 @@
 	<title>
 		<band height="215" splitType="Stretch">
 			<frame>
-				<reportElement uuid="ba197759-17bd-49ad-8223-240fca9e56bf" mode="Opaque" x="0" y="85" width="802" height="31" forecolor="#000000" backcolor="#FFFFFF"/>
+				<reportElement uuid="ba197759-17bd-49ad-8223-240fca9e56bf" mode="Opaque" x="0" y="119" width="797" height="10" forecolor="#000000" backcolor="#FFFFFF"/>
 				<line>
-					<reportElement uuid="0fb6ea9e-e49f-4855-a769-1e781b5b7f11" x="0" y="0" width="797" height="1"/>
+					<reportElement uuid="0fb6ea9e-e49f-4855-a769-1e781b5b7f11" x="0" y="-6" width="797" height="1"/>
 				</line>
 			</frame>
 			<frame>
 				<reportElement uuid="0425713b-055e-4583-a5ed-6c641f13a113" mode="Opaque" x="0" y="0" width="802" height="71" backcolor="#FFFFFF"/>
 				<staticText>
-					<reportElement uuid="acef31af-c27a-4486-9a6a-3ab4a84efea4" style="Title" mode="Transparent" x="0" y="0" width="802" height="56" forecolor="#FF0000" backcolor="#FFFFFF"/>
+					<reportElement uuid="acef31af-c27a-4486-9a6a-3ab4a84efea4" style="Title" mode="Transparent" x="162" y="0" width="473" height="56" forecolor="#FF0000" backcolor="#FFFFFF"/>
 					<box topPadding="4" leftPadding="4" bottomPadding="4" rightPadding="4"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Segoe UI" size="28" isBold="true"/>
+						<font fontName="Times New Roman" size="28" isBold="true"/>
 					</textElement>
 					<text><![CDATA[Persaudaraan Donor Darah Majalaya ]]></text>
-				</staticText>
-				<staticText>
-					<reportElement uuid="acef31af-c27a-4486-9a6a-3ab4a84efea4" style="SubTitle" mode="Transparent" x="146" y="37" width="538" height="34" forecolor="#000000" backcolor="#2D2302"/>
-					<box topPadding="4" leftPadding="4" bottomPadding="4" rightPadding="4"/>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Segoe UI" size="8" isBold="true" isItalic="false"/>
-					</textElement>
-					<text><![CDATA[Sekretariat : Jl. Pejuang No 217, Desa Loa, Kecamatan Paseh, Kabupaten Bandung, Indonesia – 40383.]]></text>
 				</staticText>
 			</frame>
 			<frame>
 				<reportElement uuid="dc6cb079-cc57-4dde-93e7-5521e967486e" mode="Opaque" x="0" y="144" width="812" height="71" forecolor="#FFFFFF" backcolor="#FFFFFF"/>
 			</frame>
 			<staticText>
-				<reportElement uuid="acef31af-c27a-4486-9a6a-3ab4a84efea4" style="SubTitle" mode="Transparent" x="170" y="56" width="514" height="28" forecolor="#000000" backcolor="#2D2302"/>
+				<reportElement uuid="acef31af-c27a-4486-9a6a-3ab4a84efea4" style="SubTitle" mode="Transparent" x="162" y="77" width="473" height="27" forecolor="#000000" backcolor="#2D2302"/>
 				<box topPadding="4" leftPadding="4" bottomPadding="4" rightPadding="4"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Segoe UI" size="8" isBold="true" isItalic="false"/>
+					<font fontName="Times New Roman" size="8" isBold="true" isItalic="false"/>
 				</textElement>
 				<text><![CDATA[Website : https://mypddm.org]]></text>
 			</staticText>
 			<textField pattern="EEEEE dd MMMMM yyyy">
-				<reportElement uuid="5f79d571-a5f7-40b7-bbe4-a9db263550ba" style="Column header" x="0" y="86" width="802" height="44" forecolor="#000000" backcolor="#000000"/>
+				<reportElement uuid="5f79d571-a5f7-40b7-bbe4-a9db263550ba" style="Column header" x="0" y="136" width="802" height="39" forecolor="#000000" backcolor="#000000"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font fontName="Segoe UI" size="14" isBold="true" isItalic="false"/>
+					<font fontName="Times New Roman" size="16" isBold="true" isItalic="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="acef31af-c27a-4486-9a6a-3ab4a84efea4" style="Title" mode="Transparent" x="0" y="130" width="802" height="85" forecolor="#000000" backcolor="#FFFFFF"/>
+				<reportElement uuid="acef31af-c27a-4486-9a6a-3ab4a84efea4" style="Title" mode="Transparent" x="0" y="175" width="802" height="40" forecolor="#000000" backcolor="#FFFFFF"/>
 				<box topPadding="4" leftPadding="4" bottomPadding="4" rightPadding="4"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Segoe UI" size="17" isBold="true"/>
+					<font fontName="Times New Roman" size="17" isBold="true"/>
 				</textElement>
 				<text><![CDATA[LAPORAN DATA USER ]]></text>
+			</staticText>
+			<image onErrorType="Icon">
+				<reportElement uuid="448df30b-e000-425f-ad5d-545bbf4d6f39" x="29" y="0" width="133" height="104"/>
+				<imageExpression><![CDATA["C:\\Users\\albin\\Documents\\NetBeansProjects\\aplikasi-sidoma\\src\\img\\logo-pddm.png"]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement uuid="acef31af-c27a-4486-9a6a-3ab4a84efea4" style="SubTitle" mode="Transparent" x="162" y="56" width="473" height="20" forecolor="#000000" backcolor="#2D2302"/>
+				<box topPadding="4" leftPadding="4" bottomPadding="4" rightPadding="4"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Times New Roman" size="8" isBold="true" isItalic="false"/>
+				</textElement>
+				<text><![CDATA[Sekretariat : Jl. Pejuang No 217, Desa Loa, Kecamatan Paseh, Kabupaten Bandung, Indonesia – 40383.]]></text>
 			</staticText>
 		</band>
 	</title>
@@ -111,21 +115,21 @@
 				<text><![CDATA[ID USER]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="58afa754-6b89-4172-a0fd-0020a21b5864" style="Column header" mode="Opaque" x="65" y="0" width="115" height="18" forecolor="#FFFFFF" backcolor="#206C97"/>
+				<reportElement uuid="58afa754-6b89-4172-a0fd-0020a21b5864" style="Column header" mode="Opaque" x="65" y="0" width="135" height="18" forecolor="#FFFFFF" backcolor="#206C97"/>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[NAMA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="a30ec25f-fd10-45ca-97dd-cdf599290789" style="Column header" mode="Opaque" x="266" y="0" width="157" height="18" forecolor="#FFFFFF" backcolor="#206C97"/>
+				<reportElement uuid="a30ec25f-fd10-45ca-97dd-cdf599290789" style="Column header" mode="Opaque" x="309" y="0" width="148" height="18" forecolor="#FFFFFF" backcolor="#206C97"/>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[GMAIL]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="6a9a4565-a7e8-4d20-aec6-11f1e33577b2" style="Column header" mode="Opaque" x="423" y="0" width="158" height="18" forecolor="#FFFFFF" backcolor="#206C97"/>
+				<reportElement uuid="6a9a4565-a7e8-4d20-aec6-11f1e33577b2" style="Column header" mode="Opaque" x="457" y="0" width="124" height="18" forecolor="#FFFFFF" backcolor="#206C97"/>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
@@ -146,7 +150,7 @@
 				<text><![CDATA[ROLE]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="58afa754-6b89-4172-a0fd-0020a21b5864" style="Column header" mode="Opaque" x="180" y="0" width="86" height="18" forecolor="#FFFFFF" backcolor="#206C97"/>
+				<reportElement uuid="58afa754-6b89-4172-a0fd-0020a21b5864" style="Column header" mode="Opaque" x="200" y="0" width="109" height="18" forecolor="#FFFFFF" backcolor="#206C97"/>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
@@ -159,35 +163,35 @@
 			<frame>
 				<reportElement uuid="e2cf8b99-ee67-481a-89ed-83fdd58f0545" style="Row" mode="Opaque" x="0" y="0" width="797" height="18"/>
 				<textField isStretchWithOverflow="true">
-					<reportElement uuid="ab7499a6-1291-43ab-9e34-33b37c73101f" style="Detail" positionType="Float" x="0" y="0" width="55" height="18"/>
+					<reportElement uuid="ab7499a6-1291-43ab-9e34-33b37c73101f" style="Detail" positionType="Float" x="0" y="0" width="65" height="18"/>
 					<textElement textAlignment="Center">
 						<font size="14"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{id_user}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
-					<reportElement uuid="a2f19edd-b80e-4a88-8b77-bf1f852f054d" style="Detail" positionType="Float" x="55" y="0" width="115" height="18"/>
+					<reportElement uuid="a2f19edd-b80e-4a88-8b77-bf1f852f054d" style="Detail" positionType="Float" x="65" y="0" width="135" height="18"/>
 					<textElement textAlignment="Center">
 						<font size="14"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{nama}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
-					<reportElement uuid="fba4823f-42a2-4fe5-a53c-8e7eba18cb21" style="Detail" positionType="Float" x="170" y="0" width="86" height="18"/>
+					<reportElement uuid="fba4823f-42a2-4fe5-a53c-8e7eba18cb21" style="Detail" positionType="Float" x="200" y="0" width="109" height="18"/>
 					<textElement textAlignment="Center">
 						<font size="14"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{no_telp}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
-					<reportElement uuid="f92d3670-b66b-4cca-9bf6-ae3a208e59c8" style="Detail" positionType="Float" x="413" y="0" width="158" height="18"/>
+					<reportElement uuid="f92d3670-b66b-4cca-9bf6-ae3a208e59c8" style="Detail" positionType="Float" x="457" y="0" width="124" height="18"/>
 					<textElement textAlignment="Center">
 						<font size="14"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{username}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
-					<reportElement uuid="7647cca1-c1f2-4f93-b515-2250463ec095" style="Detail" positionType="Float" x="571" y="0" width="123" height="18"/>
+					<reportElement uuid="7647cca1-c1f2-4f93-b515-2250463ec095" style="Detail" positionType="Float" x="581" y="0" width="113" height="18"/>
 					<textElement textAlignment="Center">
 						<font size="14"/>
 					</textElement>
@@ -201,7 +205,7 @@
 					<textFieldExpression><![CDATA[$F{role}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
-					<reportElement uuid="fba4823f-42a2-4fe5-a53c-8e7eba18cb21" style="Detail" positionType="Float" x="256" y="0" width="157" height="18"/>
+					<reportElement uuid="fba4823f-42a2-4fe5-a53c-8e7eba18cb21" style="Detail" positionType="Float" x="309" y="0" width="148" height="18"/>
 					<textElement textAlignment="Center">
 						<font size="14"/>
 					</textElement>
