fiks report pasien

--- a/src/laporan/report_pasien.jrxml
+++ b/src/laporan/report_pasien.jrxml
@@ -377,6 +377,7 @@
 				</textField>
 			</frame>
 		</band>
+             </detail>
 	<columnFooter>
 		<band height="12" splitType="Stretch">
 			<line>
